--- a/src/_core/scss/base/reboot/_reboot.scss
+++ b/src/_core/scss/base/reboot/_reboot.scss
@@ -49,9 +49,9 @@ body {
 	color: $black;
 }
 
-#content {
-	padding-bottom: 20px;
-}
+// #content {
+// 	padding-bottom: 20px;
+// }
 
 // for ie 11
 main,
